2009-02-16  MatthiasClasen  <mclasen@redhat.com>

	Bug 572041 – Focus should change when advancing forward in GtkAssistant

	* gtk/gtkassistant.c (set_current_page): Set focus when the current
	page changes. Pointed out by Eitan Isaacson

2009-02-16  MatthiasClasen  <mclasen@redhat.com>

	* configure.in: Require GLib 2.19.7 for GMountOperation::aborted.

	* gtk/gtkmountoperation.c: Implement GMountOperation::aborted.

2009-02-16  Sven Neumann  <sven@gimp.org>

	* gdk/gdk.symbols
	* gdk/directfb/gdkkeys-directfb.c: implement
	gdk_keymap_get_caps_lock_state(). No "state-changed" signal yet.

2009-02-16  Tor Lillqvist  <tml@novell.com>

	Bug 571873 - Compile error with gdk/win32/gdkselection-win32.c

	* gdk/win32/gdkselection-win32.c (gdk_selection_convert): Cast
	gpointer to char * before pointer arithmetic to avoid compilation
	error with MSVC.

	(_gdk_selection_property_delete): Remove unused variable.

2009-02-13  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Don't forget to
	register randr events. Found by Søren Sandmann

2009-02-13  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Check for Xrandr 1.3

	* gdk/x11/gdkdisplay-x11.[ch]: Rename have_randr12 to have_randr13
	and set if if we have randr 1.3

	* gdk/x11/gdkscreen-x11.c: Go back to using randr for monitor
	information, if we have XRRGetScreenResourcesCurrent.
:
2009-02-12  Cody Russell  <bratsche@gnome.org>

	Bug 571576 – gdk_pixbuf_save_to_stream() broken

	* gdk-pixbuf/gdk-pixbuf-io.c: Fix gdk_pixbuf_save_to_stream() so that
	it does not always return FALSE (even when it succeeds), and also so
	that it does not set error to NULL when something goes wrong.

2009-02-12  Marek Kasik  <mkasik@redhat.com>

	Bug 568571 – Asian am/pm format on cups print backend's time parsing

	* modules/printbackends/cups/gtkprintbackendcups.c: Add Asian am/pm
	format into formats recognized by CUPS backend

2009-02-11  Matthias Clasen  <mclasen@redhat.com>
