@@ -1,5 +1,12 @@
 2009-02-16  MatthiasClasen  <mclasen@redhat.com>
 
+	Bug 572040 – GtkAssistant does not expose page titles
+
+	* gtk/gtkassistant.c (gtk_assistant_accessible_ref_child): Set
+	the object name to the page title. Proposed by Eitan Isaacson
+
+2009-02-16  MatthiasClasen  <mclasen@redhat.com>
+
 	Bug 572041 – Focus should change when advancing forward in GtkAssistant
 
 	* gtk/gtkassistant.c (set_current_page): Set focus when the current
